--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
+  "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.7.1",
+    "vuepress-plugin-cursor-effects": "^1.0.0",
+    "vuepress-plugin-dynamic-title": "^1.0.0",
+    "vuepress-plugin-go-top": "^1.0.4",
+    "vuepress-plugin-meting": "^0.1.1",
+    "vuepress-plugin-ribbon": "^1.0.2",
     "vuepress-theme-reco": "^1.5.7"
   },
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
+  },
+  "dependencies": {
+    "vuepress-plugin-helper-live2d": "^1.0.2"
   }
 }
