--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-medium-zoom": "^1.7.1",
+    "@vuepress/plugin-nprogress": "^1.7.1",
+    "@vuepress/plugin-pwa": "^1.7.1",
     "vuepress": "^1.7.1",
     "vuepress-plugin-cursor-effects": "^1.0.0",
     "vuepress-plugin-dynamic-title": "^1.0.0",
     "vuepress-plugin-go-top": "^1.0.4",
+    "vuepress-plugin-helper-live2d": "^1.0.2",
     "vuepress-plugin-meting": "^0.1.1",
     "vuepress-plugin-ribbon": "^1.0.2",
     "vuepress-theme-reco": "^1.5.7"
@@ -12,8 +16,5 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
-  },
-  "dependencies": {
-    "vuepress-plugin-helper-live2d": "^1.0.2"
   }
 }
