--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "vuepress-plugin-dynamic-title": "^1.0.0",
     "vuepress-plugin-go-top": "^1.0.4",
     "vuepress-plugin-helper-live2d": "^1.0.2",
-    "vuepress-plugin-meting": "^0.1.1",
+    "vuepress-plugin-meting": "^0.2.3",
     "vuepress-plugin-ribbon": "^1.0.2",
-    "vuepress-theme-reco": "^1.5.7"
+    "vuepress-theme-reco": "^1.5.7",
+    "commitizen": "^4.2.4"
   },
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "commit": "git add -A && git cz"
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
@@ -25,7 +27,7 @@
   },
   "config": {
     "commitizen": {
-        "path": "cz-conventional-changelog"
+      "path": "cz-conventional-changelog"
     }
   }
 }
