--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress-reco/vuepress-plugin-kan-ban-niang": "^1.0.5",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.6.0",
     "@vuepress/plugin-medium-zoom": "^1.7.1",
     "@vuepress/plugin-nprogress": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
+    "commitizen": "^4.2.4",
     "core-js": "2",
     "vuepress": "^1.7.1",
     "vuepress-plugin-cursor-effects": "^1.0.0",
@@ -12,9 +14,9 @@
     "vuepress-plugin-go-top": "^1.0.4",
     "vuepress-plugin-helper-live2d": "^1.0.2",
     "vuepress-plugin-meting": "^0.2.3",
+    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-plugin-ribbon": "^1.0.2",
-    "vuepress-theme-reco": "^1.5.7",
-    "commitizen": "^4.2.4"
+    "vuepress-theme-reco": "^1.5.7"
   },
   "scripts": {
     "dev": "vuepress dev docs",
